--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,12 @@ body{
   max-width: 1150px;
   margin: auto;
 }
-.clearfix{
-  content: '';
+.clearfix::after{
   display: table;
+  content: '';
   clear: both;
 }
-{}
-{}
+
 /* UTILS */
 .btn{
   text-decoration: none;
@@ -30,10 +29,6 @@ body{
   font-size: 14px;
 }
 
-
-{}
-{}
-{}
 /* HEADER */
 header{
   height: 80px;
@@ -106,9 +101,6 @@ header{
 .btn-jumbotron a:first-child{
   margin-right: 30px;
 }
-{}
-{}
-{}
 .btn.btn-black{
   color: white;
   background-color: black;}
@@ -156,7 +148,6 @@ header{
   line-height: 35px;
 }
 
-
 /* main-bottom */
 .vertical-sections{
   padding: 30px 0;
@@ -183,7 +174,6 @@ header{
   display: inline-block;
   font-size: 26px;
 }
-
 .vertical-section-two img{
   position: absolute;
   top: -27%;
@@ -200,20 +190,83 @@ header{
 .btn-main-bottom{
   margin-top: 30px;
 }
-{}
-{}
 /* FOOTER */
-{}
-{}
-{}
-{}
-{}
-{}
-{}
-{}
-{}
-{}
-{}
-{}
-{}
-{}
+
+footer{
+  background-color: rgb(36, 36, 41);
+  padding-top: 100px;
+  color: white;
+}
+.footer-top{
+  margin-bottom: 30px;
+}
+.footer-bottom{
+  line-height: 95px;
+  border-top: 2px solid rgb(136, 147, 251);
+  color: white;
+  padding-bottom: 50px;
+  vertical-align: middle;
+}
+.contact-social-area{
+  width: 35%;
+  float: left;
+  padding-right: 100px;
+}
+.navigation-area-footer{
+  width: 65%;
+  float: left;
+}
+.navigation-area-footer .cln{
+  width: calc(100% / 4);
+  float: left;
+}
+h3{
+  color: rgb(136, 147, 251);
+  font-size: 32px;
+  margin-bottom: 35px;
+}
+.selection-lenguage{
+  width: 100%;
+}
+.selection-lenguage img, .selection-lenguage p, .selection-lenguage{
+  float: left;
+  margin-right: 7px;
+}
+.selection-lenguage img{
+  width: 10%;
+}
+.selection-lenguage p{
+  font-size: 15px;
+}
+.fa-solid{
+  font-size: 15px;
+}
+.social-icons-footer{
+  width: 100%;
+  display: inline-block;
+  margin-top: 20px;;
+}
+.twitter-logo, .instagram-logo, .facebook-logo, .youtube-logo {
+  display: inline-block;
+  width: 7%;
+  vertical-align:middle;
+  margin-right: 30px;
+}
+.cln ul li a.title-menu-footer{
+  color: rgb(136, 147, 251);
+  font-weight: bold;
+}
+.cln ul li a{
+line-height: 35px;
+}
+.footer-bottom-blue{
+  float: right;
+}
+#freccia-in-giù{
+  color: white;
+  text-decoration: none;
+}
+.social-icons-footer a{
+  color: white;
+  text-decoration: none;
+}
